--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Assignments</title>
+    <title>Todo List</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>Todo List</h1>
+    <h1>Todo In The Sky</h1>
     <div class="container">
         <form action="">
         <input type="text" class="input" />
